--- a/index.html
+++ b/index.html
@@ -1,1 +1,145 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cartelera de Cine</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+        }
+        .movie-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        .movie {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            margin: 10px;
+            padding: 20px;
+            width: 30%;
+            text-align: center;
+        }
+        .movie img {
+            width: 100%;
+            border-radius: 8px;
+        }
+        .movie h3 {
+            color: #333;
+        }
+        .showtimes {
+            margin-top: 10px;
+            font-size: 14px;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
 
+<header>
+    <h1>Cartelera de Cine</h1>
+</header>
+
+<div class="container">
+    <h2>Películas en Cartelera</h2>
+    <div class="movie-list">
+        <div class="movie">
+            <img src="pelicula1.jpg" alt="Pelicula 1">
+            <h3>Pelicula 1</h3>
+            <p>Descripción breve de la película.</p>
+            <div class="showtimes">
+                <p>Horarios: 14:00, 16:30, 19:00, 21:30</p>
+            </div>
+        </div>
+        <div class="movie">
+            <img src="pelicula2.jpg" alt="Pelicula 2">
+            <h3>Pelicula 2</h3>
+            <p>Descripción breve de la película.</p>
+            <div class="showtimes">
+                <p>Horarios: 13:00, 15:30, 18:00, 20:30</p>
+            </div>
+        </div>
+        <div class="movie">
+            <img src="pelicula3.jpg" alt="Pelicula 3">
+            <h3>Pelicula 3</h3>
+            <p>Descripción breve de la película.</p>
+            <div class="showtimes">
+                <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
+            </div>
+            </div>
+            <div class="movie">
+                <img src="pelicula3.jpg" alt="Pelicula 4">
+                <h3>Pelicula 4</h3>
+                <p>Descripción breve de la película.</p>
+                <div class="showtimes">
+                    <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
+                </div>
+                </div>
+                <div class="movie">
+                    <img src="pelicula3.jpg" alt="Pelicula 5">
+                    <h3>Pelicula 5</h3>
+                    <p>Descripción breve de la película.</p>
+                    <div class="showtimes">
+                        <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
+                    </div>
+                    </div>
+                    <div class="movie">
+                        <img src="pelicula3.jpg" alt="Pelicula 6">
+                        <h3>Pelicula 6</h3>
+                        <p>Descripción breve de la película.</p>
+                        <div class="showtimes">
+                            <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
+                        </div>
+                        </div>
+                        <div class="movie">
+                            <img src="pelicula3.jpg" alt="Pelicula 7">
+                            <h3>Pelicula 7</h3>
+                            <p>Descripción breve de la película.</p>
+                            <div class="showtimes">
+                                <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
+                            </div>
+                            </div>
+                            <div class="movie">
+                                <img src="pelicula3.jpg" alt="Pelicula 8">
+                                <h3>Pelicula 8</h3>
+                                <p>Descripción breve de la película.</p>
+                                <div class="showtimes">
+                                    <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
+                                </div>
+                                </div>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <p>&copy; 2024 Cine Ejemplo. Todos los derechos reservados.</p>
+</footer>
+
+</body>
+</html>
