--- a/index.html
+++ b/index.html
@@ -3,143 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cartelera de Cine</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        h1 {
-            margin: 0;
-        }
-        .container {
-            width: 80%;
-            margin: 20px auto;
-        }
-        .movie-list {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-        .movie {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            margin: 10px;
-            padding: 20px;
-            width: 30%;
-            text-align: center;
-        }
-        .movie img {
-            width: 100%;
-            border-radius: 8px;
-        }
-        .movie h3 {
-            color: #333;
-        }
-        .showtimes {
-            margin-top: 10px;
-            font-size: 14px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ToiletsSecure Incorporated - Servicios de Fontanería</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-
-<header>
-    <h1>Cartelera de Cine</h1>
-</header>
-
-<div class="container">
-    <h2>Películas en Cartelera</h2>
-    <div class="movie-list">
-        <div class="movie">
-            <img src="pelicula1.jpg" alt="Pelicula 1">
-            <h3>Pelicula 1</h3>
-            <p>Descripción breve de la película.</p>
-            <div class="showtimes">
-                <p>Horarios: 14:00, 16:30, 19:00, 21:30</p>
-            </div>
+    <!-- Cabecera -->
+    <header>
+        <div class="container">
+            <img src="toilets fontanería.png" alt="imagen de fontanería" style="width:500px;height:500px;">
+            <h1>ToiletsSecure Incorporated</h1>
+            <p>Soluciones de fontanería confiables y rápidas</p>
         </div>
-        <div class="movie">
-            <img src="pelicula2.jpg" alt="Pelicula 2">
-            <h3>Pelicula 2</h3>
-            <p>Descripción breve de la película.</p>
-            <div class="showtimes">
-                <p>Horarios: 13:00, 15:30, 18:00, 20:30</p>
-            </div>
+    </header>
+    <!-- Descripción -->
+    <section id="description">
+        <div class="container">
+            <p>En ToiletsSecure Incorporated, nos especializamos en ofrecer servicios de fontanería de alta calidad para hogares y negocios. Con más de 20 años de experiencia, nuestro equipo de profesionales está listo para resolver cualquier problema relacionado con el sistema de agua, desde reparaciones de emergencia hasta instalaciones complejas. ¡Tu comodidad es nuestra prioridad!</p>
         </div>
-        <div class="movie">
-            <img src="pelicula3.jpg" alt="Pelicula 3">
-            <h3>Pelicula 3</h3>
-            <p>Descripción breve de la película.</p>
-            <div class="showtimes">
-                <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
-            </div>
-            </div>
-            <div class="movie">
-                <img src="pelicula3.jpg" alt="Pelicula 4">
-                <h3>Pelicula 4</h3>
-                <p>Descripción breve de la película.</p>
-                <div class="showtimes">
-                    <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
+    </section>
+
+    <!-- Servicios -->
+    <section id="services">
+        <div class="container">
+            <h2>Nuestros Servicios</h2>
+            <div class="services-list">
+                <div class="service-item">
+                    <h3>Reparaciones de Emergencia</h3>
+                    <p>Estamos disponibles las 24 horas para atender cualquier emergencia en tu sistema de fontanería.</p>
                 </div>
+                <div class="service-item">
+                    <h3>Instalación de Sistemas de Agua</h3>
+                    <p>Ofrecemos instalación de sistemas de agua tanto residenciales como comerciales.</p>
                 </div>
-                <div class="movie">
-                    <img src="pelicula3.jpg" alt="Pelicula 5">
-                    <h3>Pelicula 5</h3>
-                    <p>Descripción breve de la película.</p>
-                    <div class="showtimes">
-                        <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
-                    </div>
-                    </div>
-                    <div class="movie">
-                        <img src="pelicula3.jpg" alt="Pelicula 6">
-                        <h3>Pelicula 6</h3>
-                        <p>Descripción breve de la película.</p>
-                        <div class="showtimes">
-                            <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
-                        </div>
-                        </div>
-                        <div class="movie">
-                            <img src="pelicula3.jpg" alt="Pelicula 7">
-                            <h3>Pelicula 7</h3>
-                            <p>Descripción breve de la película.</p>
-                            <div class="showtimes">
-                                <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
-                            </div>
-                            </div>
-                            <div class="movie">
-                                <img src="pelicula3.jpg" alt="Pelicula 8">
-                                <h3>Pelicula 8</h3>
-                                <p>Descripción breve de la película.</p>
-                                <div class="showtimes">
-                                    <p>Horarios: 12:00, 14:30, 17:00, 19:30</p>
-                                </div>
-                                </div>
+                <div class="service-item">
+                    <h3>Desatascos</h3>
+                    <p>Desatascamos tuberías y desagües de manera rápida y eficiente.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Revisión y Mantenimiento</h3>
+                    <p>Proporcionamos inspecciones periódicas para asegurar el buen funcionamiento de tu sistema de fontanería.</p>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+    </section>
 
-<footer>
-    <p>&copy; 2024 Cine Ejemplo. Todos los derechos reservados.</p>
-</footer>
+    <!-- Formulario de contacto -->
+    <section id="contact">
+        <div class="container">
+            <h2>Contáctanos</h2>
+            <form action="#" method="POST">
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="name" required>
 
+                <label for="email">Correo electrónico:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Mensaje:</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+
+                <button type="submit">Enviar Mensaje</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Pie de página -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 ToiletsSecure Incorporated (Manuel Maldonado Navarro). Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
