--- a/página de fontanerIa.html
+++ b/página de fontanerIa.html
@@ -70,7 +70,7 @@
     <!-- Pie de página -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 ToiletsSecure Incorporated. Todos los derechos reservados.</p>
+            <p>&copy; 2024 ToiletsSecure Incorporated (Manuel Maldonado Navarro). Todos los derechos reservados.</p>
         </div>
     </footer>
 </body>
